--- a/src/components/video/videodescription/VideoDescription.scss
+++ b/src/components/video/videodescription/VideoDescription.scss
@@ -1,13 +1,11 @@
 .video__description{
-
+    white-space: pre;
     background: var(--missing-items-background);
     min-height: 5rem;
 
     border-radius: 5px;
 
     padding: 1rem;
-
-    word-wrap: wrap;
-    word-break:break-word;
+    line-height: 1.5rem;
 
 }
